infra/kubernetes/base/databases.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-db
  namespace: secureflow
spec:
  replicas: 1
  selector:
    matchLabels:
      svc: auth-db
  template:
    metadata:
      labels:
        svc: auth-db
    spec:
      containers:
        - name: postgres
          image: postgres@sha256:bbb8851608e3ff4901156bf6a4bf90735a9d44ae014c03811bfdb2f9c354b18b    # CK-03 — no digest pinning.
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: auth-db
  namespace: secureflow
spec:
  selector:
    svc: auth-db
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-db
  namespace: secureflow
spec:
  replicas: 1
  selector:
    matchLabels:
      svc: transaction-db
  template:
    metadata:
      labels:
        svc: transaction-db
    spec:
      containers:
        - name: postgres
          image: postgres@sha256:bbb8851608e3ff4901156bf6a4bf90735a9d44ae014c03811bfdb2f9c354b18b    # CK-03 — no digest pinning.
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: transaction-db
  namespace: secureflow
spec:
  selector:
    svc: transaction-db
  ports:
    - port: 5432
      targetPort: 5432
